03Mar23=======================================================================
1. Fix DXDebug::DXDebug not found errors in rarely used functions. This is 
   also an interaction with differing versions of Mojolicious. Clearly this 
   has never happened to me (sigh).
02Mar23=======================================================================
1. Fix sh/dx/30 problem. I.e. allow old style version of sh/dx 30.  
01Mar23=======================================================================
1. Revert PC92 A D and PC92 C record flags back to defaults.
2. Deal with users that send gibberish.
3. Fix show/425 (default) URL.
4. Improve Spot deduping.
28Feb23=======================================================================
1. Default ip addresses ON in PC92 C records, disable PC92 A D record output.
2. Add CTY-3308 prefixes.
3. Fix gen_usdb_data.pl (add missing use DXUtil), update current location of
   official FCC databases.
4. Remove the duplicate IP addresses across exits and relays from badip lists
   during generation by create_master_badip_files.pl.
14Feb23=======================================================================
1. Attempt to be more M$ Windows compatible. This basically is to do with the
   unfortunate fact that most of the Windows perl cannot do, or simulate 
   spawning (running another process in parallel) and/or Mojolicious cannot
   handle coping with one or more versions of these simulations. 

   I don't have a windows perl available to me at moment so I can only
   simulate running under windows by setting a variable.

   You need to know that running any version of DXSpider on Windows will do
   all long running commands in line. Much as the 'master' branch does. So
   running large nodes on Windows boxes with versions of perl that do not
   support running spawned processes continues to be contra-indicated. Much 
   as it has ALWAYS been. 
04Feb23=======================================================================