@@ -1128,6 +1128,27 @@ PC protocol to connected nodes either for testing or to unstick things.
 You can also use in the same way as a talk command to a connected user but
 without any processing, added of "from <blah> to <blah" or whatever.
  
+=== 0^PING [argument]^User level link check command
+At the user level, this command allows the user to check that they
+are still connected to a functioning node. If the command is
+issued with no arguments it will return string 'PONG 123' where
+'123' is a node global counter starting at 1. This number cannot
+be relied to run consecutively as it is shared by all users.
+
+If an argument is supplied then the return is 'PONG ARGUMENT'. So it
+you are a client program and you need a counter or some other unique
+string to satisfy yourself that you are not being spoofed, then you
+will need to supply the argument and check that reply is what you
+expect:
+
+ping 23 or ping xyzzy
+
+will return
+
+PONG 23 or PONG XYZZY
+
+respectively.
+
 === 1^PING <node call>^Check the link quality between nodes
 This command allows you to send a frame to another cluster node on
 the network and get a return frame.  The time it takes to do this
