@@ -6,27 +6,43 @@
 #
 #
 
-my $self = shift;
-my $line = uc shift;   # only one callsign allowed 
-my ($call) = $line =~ /^\s*(\S+)/;
+my $counter;
 
-# are we permitted?
-return (1, $self->msg('e5')) if $self->priv < 1;
+sub init
+{
+	$counter = 0;
+}
 
-# is there a call?
-return (1, $self->msg('e6')) if !$call;
+sub handle
+{
+	my $self = shift;
+	my $line = uc shift;		# only one callsign allowed 
+	my ($call) = $line =~ /^\s*(\S+)/;
 
-# is it me?
-return (1, $self->msg('pinge1')) if $call eq $main::mycall;
+#	$DB::single = 1;
 
-# can we see it? Is it a node?
-my $noderef = Route::Node::get($call);
+	if ($self->{priv} < 1) {
+		if ($call) {
+			return (1, "PONG $call");
+		}
+		++$counter, return (1, "PONG $counter") 
+	}
 
-return (1, $self->msg('e7', $call)) unless $noderef;
+	# is there a call?
+	return (1, $self->msg('e6')) if !$call;
 
-# ping it
-DXXml::Ping::add($self, $call);
+	# is it me?
+	return (1, $self->msg('pinge1')) if $call eq $main::mycall;
 
-return (1, $self->msg('pingo', $call));
+	# can we see it? Is it a node?
+	my $noderef = Route::Node::get($call);
+
+	return (1, $self->msg('e7', $call)) unless $noderef;
+
+	# ping it
+	DXXml::Ping::add($self, $call);
+
+	return (1, $self->msg('pingo', $call));
+}
 
 
